--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     --custom-theme2: #414141;
     --custom-theme3: #ff0000;
     --custom-theme4: #af0404;
+    --custom-theme5: #1e1d1d;
     --text-color: #ffffff;
     --text-color2: rgba(255, 255, 255, 75%);
 }
@@ -20,17 +21,26 @@ html {
 }
 
 body {
-    margin: 5% auto;
+    margin: 1rem auto;
+    padding: 1rem;
+    /* font-family: 'Courier New', Courier, monospace; */
     background-color: var(--custom-theme1);
     border-radius: 1rem;
     max-width: 75rem;
+}
+
+.body__title {
+    text-align: center;
+    font-size: 2.5rem;
+    padding: 1rem;
+    -webkit-text-fill-color: var(--custom-theme3);
 }
 
 .header {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: 1.5rem;
+    padding: 0.8rem;
 }
 
 h1 {
@@ -56,13 +66,14 @@ h1 {
     font-size: 1.3rem;
     color: var(--background);
     background-color: var(--background);
-    border-radius: 10px;
-    padding: 1rem;
+    border-radius: 0.6rem;
+    padding: 0.8rem;
 }
 
 .navlist__item a:hover {
     -webkit-text-fill-color: var(--custom-theme3);
     background-color: var(--custom-theme1);
+    text-shadow: #ff0000 0px 0px 1rem;
     text-decoration: underline;
     text-underline-offset: 0.4rem;
     text-decoration-thickness: 0.15rem;
@@ -71,14 +82,16 @@ h1 {
 
 .body__hr {
     width: max(85%, 70vw);
-    margin: auto;
-    opacity: 0.8;
+    margin: 0 auto;
+    opacity: 0.4;
 }
 
 .about__me {
     padding: 1.5rem;
     display: flex;
+    flex-direction: row wrap;
     justify-content: space-around;
+
 }
 
 .about__card {
@@ -86,7 +99,7 @@ h1 {
     height: fit-content;
     padding: 1.5rem;
     background-color: var(--background);
-    border: 2px solid var(--text-color);
+    border: 0.125rem inset var(--text-color);
     border-right-style: dashed;
     border-radius: 1rem 0 0 1rem;
     text-align: center;
@@ -111,7 +124,7 @@ h1 {
 
 .about__info {
     padding-left: 2rem;
-    border: 2px solid var(--text-color);
+    border: 0.125rem inset var(--text-color);
     border-left-style: dashed;
     border-radius: 0 1rem 1rem 0;
     background-color: var(--background);
@@ -126,6 +139,18 @@ h1 {
     justify-content: space-around;
 }
 
+.hide {
+    display: none;
+}
+
+.inactive {
+    opacity: 0.5;
+}
+
+.active {
+    opacity: 1;
+}
+
 .about__btn {
     font-size: 1rem;
     background-color: transparent;
@@ -138,10 +163,6 @@ h1 {
 
 .about__btn:hover {
     cursor: pointer;
-}
-
-#skillsBtn {
-    opacity: 0.5;
 }
 
 .about__hr {
@@ -166,15 +187,20 @@ h1 {
 }
 
 .skills__container {
+    width: 95%;
+    margin: auto; 
+    height: fit-content;
     padding: 1rem 4rem;
     display: flex;
-    justify-content: space-around;
+    flex-wrap: wrap;
     align-items: center;
+    justify-content: space-around;
+    gap: 1rem;
 }
 
 .skills {
     display: flex;
-    flex-direction: row wrap;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -182,25 +208,147 @@ h1 {
     width: 6rem;
     height: 4rem;
     background-color: var(--custom-theme1);
-    border: 0.1rem solid var(--custom-theme3);
+    border: 0.15rem inset var(--custom-theme3);
     border-radius: 0.5rem;
-    position: relative;
 }
 
-/* NEED TO GET THIS WORKING FOR ANIMATED BORDER!! (using a border property for now)
+/* NEED TO GET THIS WORKING FOR ANIMATED BORDER!! (using a border property for now) */
 
-.skills::after, .skills::before {
-    content: '';
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 50%;
-    left: 50%;
-    translate: -50% -50%;
-    background: var(--custom-theme3);
-    z-index: -1;
+.projects__container {
+    width: 95%;
+    height: 30rem;
+    margin: 0 auto 1.5rem auto;
+    padding: 1rem;
+    border: 0.125rem inset var(--custom-theme2);
+    border-radius: 1rem;
+    background-color: var(--custom-theme5);
+    display: flex;
+    flex-direction: row nowrap;
+    justify-content: space-around;
+    align-items: center;
+    gap: 3rem;
+    overflow: hidden;
 }
 
-*/
+.projects__container:hover {
+    overflow-x: scroll;
+    scroll-behavior: smooth;
+}
+
+.projects__container::-webkit-scrollbar {
+  width: 8rem;
+}
+
+.projects__container::-webkit-scrollbar-track {
+  background-color: none;
+  height: 0.5rem;
+  margin-inline: 1rem;
+}
+
+.projects__container::-webkit-scrollbar-thumb {
+  background: var(--custom-theme3);
+  padding: 0.6rem;
+  border-radius: 1rem;
+}
+
+.project__link {
+    text-decoration: none;
+    border-radius: 1rem;
+    box-shadow: var(--text-color) 0px 0px 0.5rem;
+}
+
+.project__link:hover {
+    text-shadow: var(--custom-theme3) 0px 0px 0.75rem;
+    box-shadow: var(--custom-theme3) 0px 0px 1rem;
+    transform: scale(1.1);
+    transition: transform 0.2s ease-in;
+}
+
+.project__card {
+    width: 20rem;
+    height: 25rem;
+    padding: 0.5rem 1rem;
+    margin-left: 0.2rem;
+    transform: translate(-0.1rem -0.2rem);
+    background: linear-gradient(45deg, var(--custom-theme1), var(--custom-theme2));
+    box-shadow: var(--text-color) 0px 0px 0.5rem;
+    border-radius: 1rem;
+    border: 0.125rem solid var(--text-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem
+}
+
+.project__img {
+    width: 10rem;
+    height: 10rem;
+    aspect-ratio: 1 / 1;
+    border: 0.2rem inset var(--custom-theme4);
+    border-radius: 1rem;
+}
+
+.project__title {
+    font-size: 1.5rem;
+    text-align: center;
+    -webkit-text-fill-color: var(--custom-theme3);
+}
+
+.project__info {
+    -webkit-text-fill-color: var(--custom-theme3);
+    background-color: var(--background);
+    border: 2px solid white;
+    border-radius: 1rem;
+    width: 90%;
+    height: fit-content;
+    padding: 1rem;
+    text-align: center;
+}
+
+.contact__section {
+    width: 85%;
+    height: fit-content;
+    margin: 1.5rem auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.contact__header {
+    text-align: center;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact__header p {
+    width: 80%;
+    font-size: 1.1rem;
+}
+
+.contact__container {
+    width: 25rem;
+    height: 25rem;
+    margin: auto;
+    border: 0.125rem inset var(--custom-theme2);
+    border-radius: 1rem;
+    background-color: var(--custom-theme5);
+    text-align: center;
+    display: flex;
+    flex-direction: row nowrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.social__list {
+    list-style-type: none;
+}
+
+.social__name {
+    -webkit-text-fill-color: var(--custom-theme3);
+}
 
 
