--- a/styles.css
+++ b/styles.css
@@ -23,10 +23,10 @@ html {
 body {
     margin: 1rem auto;
     padding: 1rem;
-    /* font-family: 'Courier New', Courier, monospace; */
+    font-family: 'Courier New', Courier, monospace;
     background-color: var(--custom-theme1);
     border-radius: 1rem;
-    max-width: 75rem;
+    max-width: 85rem;
 }
 
 .body__title {
@@ -41,9 +41,11 @@ body {
     justify-content: space-evenly;
     align-items: center;
     padding: 0.8rem;
+    margin-bottom: 1rem;
 }
 
 h1 {
+    width: 50%;
     text-align: center;
     font-size: 2.2rem;
     -webkit-text-fill-color: #ff0000;
@@ -57,6 +59,7 @@ h1 {
 .navlist__container {
     list-style-type: none;
     display: flex;
+    flex-direction: row wrap;
     justify-content: space-around;
     align-items: center;
 }
@@ -171,12 +174,12 @@ h1 {
 }
 
 .course__list {
-    font-size: 0.9rem;
     color: var(--text-color);
     list-style-type: none;
 }
 
 .course__item h3 {
+    width: 75%;
     margin: 0.8rem auto;
     text-align: center;
     -webkit-text-fill-color: #ff0000;
@@ -190,7 +193,7 @@ h1 {
     width: 95%;
     margin: auto; 
     height: fit-content;
-    padding: 1rem 4rem;
+    padding: 1rem 3rem;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -205,8 +208,8 @@ h1 {
     align-items: center;
     text-align: center;
     font-weight: bold;
-    width: 6rem;
-    height: 4rem;
+    width: 7rem;
+    height: 5rem;
     background-color: var(--custom-theme1);
     border: 0.15rem inset var(--custom-theme3);
     border-radius: 0.5rem;
@@ -226,7 +229,7 @@ h1 {
     flex-direction: row nowrap;
     justify-content: space-around;
     align-items: center;
-    gap: 3rem;
+    gap: 1rem;
     overflow: hidden;
 }
 
@@ -252,9 +255,11 @@ h1 {
 }
 
 .project__link {
+    margin: 0 1rem;
     text-decoration: none;
     border-radius: 1rem;
     box-shadow: var(--text-color) 0px 0px 0.5rem;
+    background-color: var(--custom-theme1);
 }
 
 .project__link:hover {
@@ -269,8 +274,10 @@ h1 {
     height: 25rem;
     padding: 0.5rem 1rem;
     margin-left: 0.2rem;
-    transform: translate(-0.1rem -0.2rem);
-    background: linear-gradient(45deg, var(--custom-theme1), var(--custom-theme2));
+    transform: translateX(0.1rem);
+    background: linear-gradient(45deg, 
+    var(--custom-theme1),
+    var(--custom-theme2));
     box-shadow: var(--text-color) 0px 0px 0.5rem;
     border-radius: 1rem;
     border: 0.125rem solid var(--text-color);
