--- a/styles.css
+++ b/styles.css
@@ -314,12 +314,13 @@ h1 {
 }
 
 .contact__section {
-    width: 75rem;
+    width: 85%;
     height: fit-content;
     margin: 1.5rem 5rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    gap: 1rem;
 }
 
 .contact__header {
@@ -332,12 +333,12 @@ h1 {
 }
 
 .contact__header p {
-    width: 35rem;
+    max-width: 50rem;
     font-size: 1.1rem;
 }
 
 .contact__container {
-    width: 20rem;
+    width: 30rem;
     height: 25rem;
     margin: auto;
     border: 0.125rem inset var(--custom-theme2);
